--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         
     </section>
   
-    <div class="container" style="margin-top: 30px;">
+    <div class="container text1" style="margin-top: 30px;">
         <img src="port-img/quote-logo..svg"  alt="">
         <h5 class="text-center"> For Me, Web Development is not just a career path or a source of income, Web Development is something which excites me, every day there is a new learning, a new possibility to explore, it's a topic for me to discuss with someone for hours. For Me, Web Development is Passion!</h5>
 
     </div>
 
-    <div class="container text-center">
+    <div class="container text-center button-arrow">
         <button class="btn btn-warning" style="margin-top: 30px;"><img src="port-img/arrow-down (1).svg" width="70px" style="padding: 5px; padding-top: 15px;padding-bottom: 15px;" alt="" srcset=""></button>
     </div>
 
@@ -134,10 +134,10 @@
    </section>
 <br><br>
 
- <section class="container" id="project">
+ <section class="container projects1" id="project">
     <h1 class="text-center" >PROJECTS</h1>
 
-    <div class="row" style="margin-top: 50px;">
+    <div class="row " style="margin-top: 50px;">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12 text-center" >
             <p>Gym Subscription Management System 
                 A web application enabling users to submit gym subscription details. Implemented HTML/CSS frontend, PHP backend, and MySQL database integration for secure data storage and retrieval.
@@ -161,7 +161,7 @@
  </section>
 
  <br><br>
- <h1 class="text-center" id="experience">EXPERIENCE</h1>
+ <h1 class="text-center text2" id="experience">EXPERIENCE</h1>
  <section class="Experience bg-secondary container-fluid py-4 mb-3"   >
     
       <div class="container">
@@ -302,9 +302,11 @@
  </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
    
   </body>
+  <script src="portfolio.js"></script>
+  
 </html>
