--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#experience" class="nav-link">Experience</a>
             </li>
             <li class="nav-item">
-                <button class="bg-white " ><a href="https://drive.google.com/file/d/1ZnPZ_nwlgJS9SOeTIwfuVkqDsdvBccDv/view?usp=sharing" target="_blank" class="nav-link text-danger">Resume</a></button>
+                <button class="bg-white " ><a href="https://drive.google.com/file/d/1ZnPZ_nwlgJS9SOeTIwfuVkqDsdvBccDv/view?usp=sharing" class="nav-link text-danger">Resume</a></button>
             </li>
 
            </ul>
