--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
     <div class="container">
 <h5 class="text-center" style="margin-top: 50px;">
-    I'm excited to share my journey and skills with you. With 2 months of dedicated learning and hands-on experience in HTML, CSS, Bootstrap, JavaScript, and React, I've embarked on a journey to craft engaging and dynamic web experiences.
+    I'm excited to share my journey and skills with you. With 6 months of dedicated learning and hands-on experience in HTML, CSS, Bootstrap, JavaScript, and React, I've embarked on a journey to craft engaging and dynamic web experiences.
     
     During this time, I've had the opportunity to delve into the fundamentals of web development, mastering the essential languages and frameworks that power modern web applications. From structuring content with HTML to styling it beautifully with CSS and Bootstrap, I've honed my ability to create visually appealing and responsive layouts.
 </h5>
@@ -131,6 +131,23 @@
             <h6 style="margin-top: 5PX;">MONGO DB</h6>
         </div>
       </div>
+
+
+
+
+
+     <div class="row" style="margin-top: 30px;">
+        <div class="col-xl-6 col-lg-6 col-6 text-center" >
+            <img src="port-img/react-logo.svg" alt="" class="img-hover img-thumbnail"  height="70px" width="70px">
+            <h6 >React</h6>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-6  text-center">
+            <img src="port-img/git logo.jpg" alt="" class="img-hover img-thumbnail"  height="70px" width="70px">
+            <h6 >Git</h6>
+        </div>
+       
+     </div>
+
    </section>
 <br><br>
 
